// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lists model description should support multiple properties 1`] = `
<div
  class="vlayout_verticalList"
  style="position: absolute; left: 10px; z-index: 1; right: 10px; top: 10px; bottom: 10px; pointer-events: auto; overflow-y: scroll;"
>
  <div
    class="vlayout_listPrototype_user"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Alex - bad
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Alex - bad
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_user"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Anton - good
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Anton - good
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_user"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Denis - bad
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Denis - bad
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_newUser"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        add new
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          add new
          <br />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`lists should allow nested absolutes and stacks 1`] = `
<div
  class="vlayout_verticalList"
  style="position: absolute; left: 10px; z-index: 1; right: 10px; top: 10px; bottom: 10px; pointer-events: auto; overflow-y: scroll;"
>
  <div
    class="vlayout_listPrototype_user"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_absolute"
      style="position: absolute; z-index: 1; pointer-events: none;"
    >
      <div
        class="vlayout_stack"
        style="position: absolute; z-index: 1; pointer-events: none;"
      >
        <div
          class="vlayout_label"
          style="position: absolute; z-index: 1; min-width: 100%; min-height: 100%; max-width: 100%; max-height: 100%; overflow: hidden; text-overflow: ellipsis;"
        >
          <span>
            Alex
            <br />
          </span>
          <div
            class="vlayout_label_shadow"
            style="position: absolute; white-space: pre; opacity: 0; z-index: 1; min-width: 100%; min-height: 100%; max-width: 100%; max-height: 100%; overflow: hidden; text-overflow: ellipsis;"
          >
            <span>
              Alex
              <br />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_user"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_absolute"
      style="position: absolute; z-index: 1; pointer-events: none;"
    >
      <div
        class="vlayout_stack"
        style="position: absolute; z-index: 1; pointer-events: none;"
      >
        <div
          class="vlayout_label"
          style="position: absolute; z-index: 1; min-width: 100%; min-height: 100%; max-width: 100%; max-height: 100%; overflow: hidden; text-overflow: ellipsis;"
        >
          <span>
            Anton
            <br />
          </span>
          <div
            class="vlayout_label_shadow"
            style="position: absolute; white-space: pre; opacity: 0; z-index: 1; min-width: 100%; min-height: 100%; max-width: 100%; max-height: 100%; overflow: hidden; text-overflow: ellipsis;"
          >
            <span>
              Anton
              <br />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_user"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_absolute"
      style="position: absolute; z-index: 1; pointer-events: none;"
    >
      <div
        class="vlayout_stack"
        style="position: absolute; z-index: 1; pointer-events: none;"
      >
        <div
          class="vlayout_label"
          style="position: absolute; z-index: 1; min-width: 100%; min-height: 100%; max-width: 100%; max-height: 100%; overflow: hidden; text-overflow: ellipsis;"
        >
          <span>
            Denis
            <br />
          </span>
          <div
            class="vlayout_label_shadow"
            style="position: absolute; white-space: pre; opacity: 0; z-index: 1; min-width: 100%; min-height: 100%; max-width: 100%; max-height: 100%; overflow: hidden; text-overflow: ellipsis;"
          >
            <span>
              Denis
              <br />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_newUser"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        add new
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          add new
          <br />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`lists should allow setting fixed width or height for items 1`] = `
<div
  class="vlayout_verticalList"
  style="position: absolute; left: 10px; z-index: 1; right: 10px; top: 10px; bottom: 10px; pointer-events: auto; overflow-y: scroll;"
>
  <div
    class="vlayout_listPrototype_user"
    style="height: 44px; pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Alex
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Alex
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_user"
    style="height: 44px; pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Anton
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Anton
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_user"
    style="height: 44px; pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Denis
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Denis
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_newUser"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        add new
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          add new
          <br />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`lists should fetch values which are observables 1`] = `
<div
  class="vlayout_verticalList"
  style="position: absolute; left: 10px; z-index: 1; right: 10px; top: 10px; bottom: 10px; pointer-events: auto; overflow-y: scroll;"
>
  <div
    class="vlayout_listPrototype_user"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Alex
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Alex
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_user"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Anton
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Anton
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_user"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Denis
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Denis
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_newUser"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        add new
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          add new
          <br />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`lists should fetch values which are observables 2`] = `
<div
  class="vlayout_verticalList"
  style="position: absolute; left: 10px; z-index: 1; right: 10px; top: 10px; bottom: 10px; pointer-events: auto; overflow-y: scroll;"
>
  <div
    class="vlayout_listPrototype_user"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Alex
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Alex
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_user"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Michael
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Michael
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_user"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Denis
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Denis
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_newUser"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        add new
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          add new
          <br />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`lists should initialize and render horizontal list 1`] = `
<div
  class="vlayout_horizontalList"
  style="position: absolute; left: 10px; z-index: 1; right: 10px; top: 10px; bottom: 10px; pointer-events: auto; overflow-x: scroll;"
>
  <div
    style="position: absolute; display: flex; flex-direction: row; height: 100%; justify-content: unsafe start; align-items: stretch;"
  >
    <div
      class="vlayout_listPrototype_user"
      style="pointer-events: none; position: relative;"
    >
      <div
        class="vlayout_label"
        style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Alex
          <br />
        </span>
        <div
          class="vlayout_label_shadow"
          style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
        >
          <span>
            Alex
            <br />
          </span>
        </div>
      </div>
    </div>
    <div
      class="vlayout_listPrototype_user"
      style="pointer-events: none; position: relative;"
    >
      <div
        class="vlayout_label"
        style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Anton
          <br />
        </span>
        <div
          class="vlayout_label_shadow"
          style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
        >
          <span>
            Anton
            <br />
          </span>
        </div>
      </div>
    </div>
    <div
      class="vlayout_listPrototype_user"
      style="pointer-events: none; position: relative;"
    >
      <div
        class="vlayout_label"
        style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Denis
          <br />
        </span>
        <div
          class="vlayout_label_shadow"
          style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
        >
          <span>
            Denis
            <br />
          </span>
        </div>
      </div>
    </div>
    <div
      class="vlayout_listPrototype_newUser"
      style="pointer-events: none; position: relative;"
    >
      <div
        class="vlayout_label"
        style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          add new
          <br />
        </span>
        <div
          class="vlayout_label_shadow"
          style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
        >
          <span>
            add new
            <br />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`lists should initialize and render vertical list 1`] = `
<div
  class="vlayout_verticalList"
  style="position: absolute; left: 10px; z-index: 1; right: 10px; top: 10px; bottom: 10px; pointer-events: auto; overflow-y: scroll;"
>
  <div
    class="vlayout_listPrototype_user"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Alex
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Alex
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_user"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Anton
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Anton
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_user"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Denis
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Denis
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_newUser"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        add new
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          add new
          <br />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`lists should reuse items on updates 1`] = `
<div
  class="vlayout_verticalList"
  style="position: absolute; left: 10px; z-index: 1; right: 10px; top: 10px; bottom: 10px; pointer-events: auto; overflow-y: scroll;"
>
  <div
    class="vlayout_listPrototype_user"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Alex
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Alex
          <br />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`lists should reuse items on updates 2`] = `
<div
  class="vlayout_verticalList"
  style="position: absolute; left: 10px; z-index: 1; right: 10px; top: 10px; bottom: 10px; pointer-events: auto; overflow-y: scroll;"
>
  <div
    class="vlayout_listPrototype_user"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Alex
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Alex
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_user"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Anton
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Anton
          <br />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`lists should support dynamic filtering 1`] = `
<div
  class="vlayout_verticalList"
  style="position: absolute; left: 10px; z-index: 1; right: 10px; top: 10px; bottom: 10px; pointer-events: auto; overflow-y: scroll;"
/>
`;

exports[`lists should support dynamic filtering 2`] = `
<div
  class="vlayout_verticalList"
  style="position: absolute; left: 10px; z-index: 1; right: 10px; top: 10px; bottom: 10px; pointer-events: auto; overflow-y: scroll;"
>
  <div
    class="vlayout_listPrototype_user"
    style="height: 44px; pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Alex
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Alex
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_user"
    style="height: 44px; pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Anton
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Anton
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_user"
    style="height: 44px; pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Michael
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Michael
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_newUser"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        add new
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          add new
          <br />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`lists should support dynamic filtering 3`] = `
<div
  class="vlayout_verticalList"
  style="position: absolute; left: 10px; z-index: 1; right: 10px; top: 10px; bottom: 10px; pointer-events: auto; overflow-y: scroll;"
>
  <div
    class="vlayout_listPrototype_user"
    style="height: 44px; pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Alex
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Alex
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_user"
    style="height: 44px; pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Anton
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Anton
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_newUser"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        add new
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          add new
          <br />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`lists should support external views 1`] = `
<div
  class="vlayout_verticalList"
  style="position: absolute; left: 10px; z-index: 1; right: 10px; top: 10px; bottom: 10px; pointer-events: auto; overflow-y: scroll;"
>
  <div
    class="vlayout_listPrototype_user"
    style="height: 44px; pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      style="background-color: rgb(170, 153, 204); position: absolute; z-index: 1; pointer-events: auto;"
    >
      Alex
    </div>
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 2; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Alex
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 2; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Alex
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_user"
    style="height: 44px; pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      style="background-color: rgb(170, 153, 204); position: absolute; z-index: 1; pointer-events: auto;"
    >
      Anton
    </div>
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 2; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Anton
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 2; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Anton
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_user"
    style="height: 44px; pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      style="background-color: rgb(170, 153, 204); position: absolute; z-index: 1; pointer-events: auto;"
    >
      Denis
    </div>
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 2; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Denis
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 2; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Denis
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_newUser"
    style="pointer-events: none; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        add new
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          add new
          <br />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`lists should support tappable items 1`] = `
<div
  class="vlayout_verticalList"
  style="position: absolute; left: 10px; z-index: 1; right: 10px; top: 10px; bottom: 10px; pointer-events: auto; overflow-y: scroll;"
>
  <div
    class="vlayout_listPrototype_user"
    style="cursor: pointer; height: 44px; pointer-events: auto; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Alex
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Alex
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_user"
    style="cursor: pointer; height: 44px; pointer-events: auto; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Anton
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Anton
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_user"
    style="cursor: pointer; height: 44px; pointer-events: auto; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        Denis
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          Denis
          <br />
        </span>
      </div>
    </div>
  </div>
  <div
    class="vlayout_listPrototype_newUser"
    style="cursor: pointer; pointer-events: auto; position: relative; min-width: 100%;"
  >
    <div
      class="vlayout_label"
      style="position: absolute; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
    >
      <span>
        add new
        <br />
      </span>
      <div
        class="vlayout_label_shadow"
        style="position: absolute; white-space: pre; opacity: 0; z-index: 1; overflow: hidden; text-overflow: ellipsis;"
      >
        <span>
          add new
          <br />
        </span>
      </div>
    </div>
  </div>
</div>
`;
